--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,20 +5,20 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta name="description" content="">
 	    <meta name="author" content="Coderthemes">
-	    <link rel="shortcut icon" href="images/favicon.ico">
+	    <link rel="shortcut icon" href="{{ url_for('static', filename='web/images/favicon.ico') }}">
 
-	    <title>Velonic - Bootstrap Admin theme</title>
+	    <title>FlaskSMS - Split Second</title>
 
 	    <!-- Google-Fonts -->
 	    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,600,700,900,400italic' rel='stylesheet'>
 	    <link href='http://fonts.googleapis.com/css?family=Cuprum:400,700' rel='stylesheet' type='text/css'>
 
 	    <!-- Bootstrap core CSS -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet">
-	    <link href="css/bootstrap-reset.css" rel="stylesheet">
-	    <link href="css/font-awesome.min.css" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='web/css/bootstrap.min.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='web/css/bootstrap-reset.css) }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='web/css/font-awesome.min.css) }}" rel="stylesheet">
 	    <!-- Custom styles for this template -->
-	    <link href="css/style.css" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='web/css/style.css) }}" rel="stylesheet">
     </head>
 
 
@@ -39,7 +39,7 @@
 								        <span class="icon-bar"></span>
 								        <span class="icon-bar"></span>
 							        </button>
-							        <a class="navbar-brand" href="index.html#"><img src="images/logo.png" alt="logo"></a>
+							        <a class="navbar-brand" href="index.html#"><img src="{{ url_for('static', filename='web/images/logo.png) }}" alt="logo"></a>
 							    </div>
 
 							    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,10 +58,10 @@
 					</div> <!-- End row -->
 
 					<div class="row hero-content text-center">
-						<h1 class="">Velonic - Responsive Admin Dashboard </h1>
+						<h1 class="">FlaskSMS - Split Second </h1>
 						<div id="macbook">
 					        <div id="tour" class="carousel slide" data-ride="carousel">
-					            
+
 					            <!-- Indicators -->
 								<ol class="carousel-indicators">
 								    <li data-target="#tour" data-slide-to="0" class="active"></li>
@@ -72,15 +72,15 @@
 					            <div class="carousel-inner">
 					            	<!-- slide item -->
 					                <div class="item active">
-					                    <img src="images/stock1.jpg" alt="slide-img">
+					                    <img src="{{ url_for('static', filename='web/images/stock1.jpg) }}" alt="slide-img">
 					                </div>
 					                <!-- slide item -->
 						            <div class="item">
-						                <img src="images/stock2.jpg" alt="slide-img">
+						                <img src="{{ url_for('static', filename='web/images/stock2.jpg) }}" alt="slide-img">
 						            </div>
 						            <!-- slide item -->
 						            <div class="item">
-						                <img src="images/stock3.jpg" alt="slide-img">
+						                <img src="{{ url_for('static', filename='web/images/stock3.jpg) }}" alt="slide-img">
 						            </div>
 					            </div> <!-- /.carousel-inner -->
 
@@ -107,7 +107,7 @@
 				<div class="row pt80">
 		            <div class="col-sm-4">
 		                <div class="features-2">
-		                    <img src="images/drawing-tablet.png" alt="">
+		                    <img src="{{ url_for('static', filename='web/images/drawing-tablet.png) }}" alt="">
 		                </div>
 		                <div>
 			                <h3>Responsive Design</h3>
@@ -117,7 +117,7 @@
 
 		            <div class="col-sm-4">
 		                <div class="features-2">
-		                    <img src="images/code-window.png" alt="">
+		                    <img src="{{ url_for('static', filename='web/images/code-window.png) }}" alt="">
 		                </div>
 		                <div>
 			                <h3>Clean Code</h3>
@@ -127,7 +127,7 @@
 
 		            <div class="col-sm-4">
 		                <div class="features-2">
-		                	<img src="images/clock.png" alt="">
+		                	<img src="{{ url_for('static', filename='web/images/clock.png) }}" alt="">
 		                </div>
 		                <div>
 			                <h3>Easy Customize</h3>
@@ -137,7 +137,7 @@
 
 	            </div> <!-- End row -->
 			</div>
-		</section> 
+		</section>
 		<!-- features -->
 
 
@@ -157,7 +157,7 @@
 		            </div><!-- end col -->
 
 		            <div class="col-sm-6 featured-img">
-		            	<img src="images/screen-3.png" alt="Features-img" class="img-responsive">
+		            	<img src="{{ url_for('static', filename='web/images/screen-3.png) }}" alt="Features-img" class="img-responsive">
 		            </div>
 
 			    </div> <!-- end row -->
@@ -248,10 +248,10 @@
 						<h2 class="title">Trusted by Thousands</h2>
 						<p class="slogan">Lorem ipsum dolor sit amet, consectetur adipis.</p>
 						<ul class="list-inline client-list pt40">
-							<li><a href="index.html" title="Microsoft"><img src="images/clients/microsoft.png" alt="clients"></a></li>
-							<li><a href="index.html" title="Google"><img src="images/clients/google.png" alt="clients"></a></li>
-							<li><a href="index.html" title="Instagram"><img src="images/clients/instagram.png" alt="clients"></a></li>
-							<li><a href="index.html" title="Converse"><img src="images/clients/converse.png" alt="clients"></a></li>
+							<li><a href="index.html" title="Microsoft"><img src="{{ url_for('static', filename='web/images/clients/microsoft.png) }}" alt="clients"></a></li>
+							<li><a href="index.html" title="Google"><img src="{{ url_for('static', filename='web/images/clients/google.png) }}" alt="clients"></a></li>
+							<li><a href="index.html" title="Instagram"><img src="{{ url_for('static', filename='web/images/clients/instagram.png) }}" alt="clients"></a></li>
+							<li><a href="index.html" title="Converse"><img src="{{ url_for('static', filename='web/images/clients/converse.png) }}" alt="clients"></a></li>
 						</ul>
 					</div> <!-- end Col -->
 				</div> <!-- end row -->
@@ -267,7 +267,7 @@
 	        <div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-3">
-						<a class="navbar-brand-footer" href="index.html#"><img src="images/logo.png" alt="logo"></a>
+						<a class="navbar-brand-footer" href="index.html#"><img src="{{ url_for('static', filename='web/images/logo.png) }}" alt="logo"></a>
                     </div>
                     <div class="col-lg-4 col-lg-offset-3 col-md-7">
                     	<ul class="nav navbar-nav">
@@ -293,12 +293,12 @@
 
 
 	    <!-- js placed at the end of the document so the pages load faster -->
-	    <script src="js/jquery.min.js"></script>
-	    <script src="js/bootstrap.min.js"></script>
-	    <!-- Jquery easing -->                                                      
-	    <script type="text/javascript" src="js/jquery.easing.1.3.min.js"></script>
+	    <script src="{{ url_for('static', filename='web/js/jquery.min.js) }}"></script>
+	    <script src="{{ url_for('static', filename='web/js/bootstrap.min.js) }}"></script>
+	    <!-- Jquery easing -->
+	    <script type="text/javascript" src="{{ url_for('static', filename='web/js/jquery.easing.1.3.min.js) }}"></script>
 	    <!-- SmoothScroll -->
-	    <script src="js/SmoothScroll.js"></script>
+	    <script src="{{ url_for('static', filename='web/js/SmoothScroll.js) }}"></script>
 	    <script type="text/javascript">
 			//jQuery for page scrolling feature - requires jQuery Easing plugin
 			$(function() {
